// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`targets > core assets 1`] = `
[
  ".changeset",
  ".husky",
  ".vscode",
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  ".npmrc",
  "commitlint.config.ts",
  "eslint.config.js",
  "lint-staged.config.js",
  "stylelint.config.js",
  "monorepo.config.ts",
  "package.json",
  "pnpm-workspace.yaml",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
  "Dockerfile",
  ".dockerignore",
]
`;

exports[`targets > normal 1`] = `
[
  ".changeset",
  ".husky",
  ".vscode",
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  ".npmrc",
  "commitlint.config.ts",
  "eslint.config.js",
  "lint-staged.config.js",
  "stylelint.config.js",
  "monorepo.config.ts",
  "package.json",
  "pnpm-workspace.yaml",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
  "Dockerfile",
  ".dockerignore",
  ".github",
  "LICENSE",
  "renovate.json",
  "SECURITY.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "netlify.toml",
]
`;
